--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
-p{
-	color: red;
+p.welcome{
+	color: #fff;
+	background-color: #E21C44;
+}
+
+p.vivacss{
+	color: #000;
+	font-weight: bold;
+}
+
+body{
+	background-color: #777;
+}
+
+h2.headline{
+	font-size: 50px;
+	padding-left: 200px;
 }
