--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-p.welcome{
+/*p.welcome{
 	color: #fff;
 	background-color: #E21C44;
 }
@@ -15,4 +15,5 @@ body{
 h2.headline{
 	font-size: 50px;
 	padding-left: 200px;
-}
+}*/
+
