--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+
+nav.menu-nav ul li.btn{
+	display: inline-block;
+	list-style-type: none;
+}
+
+nav.menu-nav ul li.btn a{
+	color: #fff;
+	background-color: red;
+	text-decoration: none;
+	padding: 10px;
+}
+
+nav.menu-nav ul li.btn:hover a{
+	color: red;
+	background-color: white;
+	transition: 0.5s all;
+}
+
 /*p.welcome{
 	color: #fff;
 	background-color: #E21C44;
